--- a/src/app/(home)/events/page.css
+++ b/src/app/(home)/events/page.css
@@ -1,6 +1,6 @@
 .banner {
     position: relative;
-    width: 1920px;
+    width: 100%;
     height: 100%; /* Adjust as needed */
     background-image: url('../../../../public/event_banner.svg'); /* Path to your image */
     background-size: cover;
